# HW3-Submission

./: .env.example  .env.staging.example  .gitignore  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
app/: Dockerfile  app.py  requirements.txt
app/templates/: base.html  index.html
app/tests/: conftest.py  test_app.py  test_config.py
db/: init.sql  seed.sql  staging-schema.sql
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: todo.spec.ts
perf/: k6.todo.js
