[project]
name = "hw3-submission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "flask>=3.1.2",
    "mysql-connector-python>=9.5.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
  \.venv
  | venv
  | __pycache__
  | \.git
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
extend-exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E,F = basic lint; I = import rules
